name:     graphene
version:  0.1.0.0
synopsis: A library to draw graphs, charts etc.
-- description:
homepage:  http://github.com/piyush-kurur/graphene.git
license:      BSD3
license-file: LICENSE

author:     Piyush P Kurur
maintainer: ppk@cse.iitk.ac.in

-- copyright:
category:   Graphics
build-type: Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  build-depends: base >=4.6 && <4.7
  exposed-modules: Graphene
  default-language: Haskell2010
